# golf

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  fly.toml  justfile
.github/workflows/: ci.yml
crates/golf-engine/: Cargo.toml
crates/golf-engine/bindings/: ActionKind.ts  Event.ts  PlayerView.ts  RuleError.ts  SeatConfig.ts  SlotView.ts  Suit.ts
crates/golf-engine/examples/: cli.rs
crates/golf-engine/src/: action.rs  apply.rs  card.rs  event.rs  lib.rs  score.rs  state.rs  view.rs
crates/golf-engine/src/bot/: easy.rs  heuristic.rs  mod.rs
crates/golf-engine/tests/: apply.rs  bots.rs  playouts.rs  score.rs
crates/golf-server/: Cargo.toml  build.rs
crates/golf-server/bindings/: Difficulty.ts  ErrorCode.ts  LobbySeat.ts  PhaseView.ts  Rank.ts  ServerMsg.ts
crates/golf-server/src/: lib.rs  main.rs  protocol.rs  registry.rs  room.rs  static.rs  ws.rs
crates/golf-server/tests/: room.rs
crates/golf-wasm/: Cargo.toml
crates/golf-wasm/src/: lib.rs
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.svelte  app.css
web/src/lib/: cards.ts  emotes.ts
web/src/lib/components/: CardView.svelte  Home.svelte  Lobby.svelte  LocalSetup.svelte  OnlineEntry.svelte  PassScreen.svelte  PlayerGrid.svelte  Scoreboard.svelte  Table.svelte
web/src/lib/protocol/: Action.ts  Card.ts  ClientMsg.ts  DrawSource.ts  Emote.ts  ErrorCode.ts  LobbyState.ts  MatchConfig.ts  SeatKind.ts  SeatView.ts  ServerMsg.ts  TurnState.ts
web/src/lib/session/: local.svelte.ts  online.svelte.ts  types.ts
