[workspace]
resolver = "2"
members = ["crates/golf-engine", "crates/golf-wasm", "crates/golf-server"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ts-rs = "10"
rand = { version = "0.9", default-features = false, features = ["std", "std_rng"] }
rand_chacha = { version = "0.9", default-features = false, features = ["std", "serde"] }

[profile.release]
lto = true
opt-level = "s"
