[package]
name = "golf-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
golf-engine = { path = "../golf-engine" }
serde_json.workspace = true
rand.workspace = true
rand_chacha.workspace = true
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
